--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,3 @@
-<footer class='mt-10 text-center text-gray-600'>
+<footer class="mt-10 text-center text-gray-200 bg-gray-800 py-4">
     <p>Copyright Pokedex 2025</p>
 </footer>
